# openmkm

./: .gitignore  CMakeLists.txt  CPP_INSTALL.md  Dockerfile  Doxyfile  README.md  WindowsInstall.txt  setup.py  winpath_setup.bat
docs/: CPP_INSTALL.md  Gemfile  README.md  _config.yml  ck_conversion.md  index.html  index.md  input.md  install.md  output.md  run.md  theory.md
docs/_includes/: mathjax.html
docs/_layouts/: default.html
docs/css/: main.css
examples/ck2ct/: gas.inp  surf.inp  thermdat
examples/latint_cti_spec/: README.md  example.cti
examples/model_simul/CSTR/: readme.txt
examples/model_simul/PFR/: pfr_1d.yaml  readme.txt
examples/model_simul/PFR_with_CSTRS/: C2H6_input.xml  pfr_0d.yaml  readme.txt
examples/model_simul/PFR_with_sensitivity/: readme.txt
examples/model_simul/PFR_with_sensitivity/FIM/: C2H6_input.xml  pfr_1d.yaml
examples/model_simul/PFR_with_sensitivity/LSA/: pfr_1d.yaml
examples/model_simul/TPD/: readme.txt  tpd.xml  tpd.yaml
examples/model_simul/Tprofile/: pfr_1d_dec_Tprof.yaml  pfr_1d_inc_Tprof.yaml  readme.txt
examples/model_simul/batch/: batch.yaml  grimech30.xml  readme.txt
examples/model_simul/bep/: batch.yaml  thermo.cti  thermo.xml
examples/model_simul_YAML/CSTR/: NH3_input.yaml  cstr.yaml
examples/model_simul_YAML/batch/: batch.yaml
examples/model_simul_YAML/bep/: thermo.yaml
examples/rctr_input_files/: batch_gasonly.yaml  cstr.yaml  pfr_0d.yaml  pfr_1d_isothermal.yaml
hetero_ct/: ck2htrcti.py
hetero_ct/io/: ck.py  ct.py
hetero_ct/reactors/: reactors.py
scripts/: ctml_writer.py
src/: CMakeLists.txt  IdealGasTRampReactor.cpp  IdealGasTRampReactor.h  KIN_Solver.cpp  KIN_Solver.h  NonLinearSolver.cpp  NonLinearSolver.h  README.md  ReactorNetHybrid.cpp  ReactorNetHybrid.h  SConstruct  hctexceptions.cpp  hctexceptions.h  io.cpp  io.h  main.cpp  omkmexceptions.cpp  omkmexceptions.h  onedReactor.cpp  pfr1d.cpp  pfr1d.h  pfr1d_base.h  pfr1d_constA.h  pfr1d_isothermal.h  pfr1d_solver.cpp  pfr1d_solver.h  reactor.h  reactor_parser.cpp  reactor_parser.h  read_input.cpp  run_reactor.h  util.cpp  util.h  zerodReactor.cpp  zerod_hybrid_solver.h
src/yaml-cpp/: CMakeLists.txt
test_files/: C2H6_input.cti  NH3_input.xml  batch.yaml  cstr.yaml  input.xml  pfr_0d.yaml  pfr_1d.yaml  pfr_1d_tprofile.yaml  rctr.yaml  rctr_tmplt.yaml  tpd.yaml
test_files/chemkin_inp_files/: BEP.inp  EAs.inp  T_flow.inp  cklink  gas.inp  sklink  surf.inp  thermdat  tube.inp  tube_COV.inp  tube_mole.inp
